# lying-style-nlp-0448-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_hallucination_truthfulness_internal_representations_probing_deception_detect_20260315_210113.jsonl  language_model_deception_lying_text_generation_stylistic_differences_20260315_205921.jsonl
papers/: README.md
papers/pages/: azaria2023_internal_state_llm_lying_manifest.txt  giorgi2023_slept_like_baby_manifest.txt  pacchiardi2024_truth_universal_manifest.txt  pauli2024_tell_truth_deception_manifest.txt  schuster2019_limitations_stylometry_manifest.txt  whentruthful_flip_deceptive_manifest.txt
results/: classification_results.json  config.json  features.csv  raw_responses.json  statistical_tests.csv
src/: analyze_responses.py  collect_responses.py
