[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for lying style NLP experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.28.0",
    "pandas>=2.3.3",
    "pypdf>=6.9.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "textstat>=0.7.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
